[gd_scene load_steps=6 format=3 uid="uid://bdrku4cijohn3"]

[ext_resource type="Script" path="res://scripts/menu-scripts/GameOverMenu.gd" id="1_c6jgj"]
[ext_resource type="Texture2D" uid="uid://cg2dxxpd64uyy" path="res://assets/finalwinner_shadowcropped.png" id="2_arktw"]
[ext_resource type="Texture2D" uid="uid://cv4elc0m0xoc3" path="res://assets/button_dark.png" id="2_kp7jt"]
[ext_resource type="Texture2D" uid="uid://b8df65nbk4wa4" path="res://assets/finalwinner_lightcropped.png" id="3_gjwj4"]
[ext_resource type="FontFile" uid="uid://7pq2pwxvjmxw" path="res://assets/fonts/TMT-Paint-Regular.woff" id="3_k4umq"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6jgj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = 8.0
offset_right = 127.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true

[node name="winner_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k4umq")
text = "winner_message"
horizontal_alignment = 1

[node name="restart_button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_kp7jt")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/restart_button"]
layout_mode = 0
offset_left = 54.0
offset_top = 8.0
offset_right = 139.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("3_k4umq")
text = "Restart"
horizontal_alignment = 1

[node name="main_menu_button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_kp7jt")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/main_menu_button"]
layout_mode = 0
offset_left = 46.0
offset_top = 8.0
offset_right = 154.0
offset_bottom = 31.0
scale = Vector2(0.9, 0.9)
theme_override_fonts/font = ExtResource("3_k4umq")
text = "Main Menu"

[node name="Player_1_wins" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_top = 552.0
offset_right = 1315.0
offset_bottom = 633.0
texture = ExtResource("2_arktw")
stretch_mode = 4

[node name="Player_2_wins" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_top = 555.0
offset_right = 1315.0
offset_bottom = 633.0
texture = ExtResource("3_gjwj4")
stretch_mode = 4

[connection signal="pressed" from="VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
